--- a/assets/scss/widgets/_videos.scss
+++ b/assets/scss/widgets/_videos.scss
@@ -16,13 +16,26 @@
 		width: 49%;
 	}
 	
+	@media all and (max-width: $screen-xs-min) {
+		@include flex-wrap(wrap);
+		@include flex-direction(column-reverse);
+		
+		> div {
+			width: 100%;
+		}
+	}
+	
 	.video-list {
 		
-		.scrollbar-inner {
+		.scroll-box {
 			max-height: 380px;
 			
-			.scroll-content {
-				padding-right: 12px;
+			.scroll-wrap {
+				padding-right: 10px;
+			}
+			
+			@media all and (max-width: $screen-sm-min) {
+				max-height: 280px;
 			}
 			
 			&.overlay {
@@ -61,6 +74,13 @@
 					pointer-events: none;
 				}
 			}
+			
+			@media all and (max-width: $screen-xs-min) {
+				@include flex-wrap(wrap);
+				max-width: 143px;
+				border-bottom: none;
+				padding-bottom: 0;
+			}
 		}
 		
 		a {
@@ -93,9 +113,11 @@
 			&:hover {
 				opacity: 0.7;
 			}
+			
 		}
 		
 		.video-title {
+			display: block;
 			font-size: 14px;
 			color: $gray-dark;
 			font-weight: bold;
@@ -103,6 +125,16 @@
 			
 			&:hover {
 				color: $brand-primary;
+			}
+			
+			@media all and (max-width: $screen-sm-min) {
+				font-size: 10px;
+				line-height: 1.3;
+			}
+			
+			@media all and (max-width: $screen-xs-min) {
+				max-height: 27px;
+				overflow: hidden;
 			}
 		}
 		
@@ -135,6 +167,16 @@
 					line-height: 1.2;
 					max-height: 30px;
 					overflow: hidden;
+					
+					@media all and (max-width: $screen-sm-min) {
+						font-size: 11px;
+						max-height: 26px;
+						text-align: center;
+					}
+				}
+				
+				@media all and (max-width: $screen-sm-min) {
+					width: 48%;
 				}
 			}
 			
@@ -147,22 +189,40 @@
 	
 	.video-meta, .video-desc {
 		color: $widget-text;
+		
+		@media all and (max-width: $screen-xs-min) {
+			display: none;
+		}
 	}
 	
 	.video-meta {
 		font-size: 9px;
 		margin-bottom: 4px;
+		
+		@media all and (max-width: $screen-sm-min) {
+			margin-bottom: 0;
+		}
 	}
 	
 	.video-desc {
 		font-size: 10px;
 		line-height: 1.5;
+		
+		@media all and (max-width: $screen-sm-min) {
+			max-height: 47px;
+			overflow: hidden;
+		}
 	}
 	
 	.video-filter {
 		@include flexbox;
 		@include flex-align-items(center);
 		margin: $grid-gutter-width/2 auto 23px;
+		
+		@media all and (max-width: $screen-sm-min) {
+			margin-top: 8px;
+			margin-bottom: 17px;
+		}
 		
 		.filter-controls {
 			@include flex-grow(1);
@@ -172,6 +232,14 @@
 		.nice-select {
 			display: inline-block;
 			margin-right: 10px;
+			
+			@media all and (max-width: $screen-sm-min) {
+				font-size: 12px;
+				height: 36px;
+				line-height: 34px;
+				margin-right: 5px;
+				padding-left: 13px;
+			}
 		}
 		
 		.video-list-layout {
@@ -182,6 +250,10 @@
 				float: left;
 				opacity: .4;
 				@include transition(opacity 0.2s ease-in-out);
+				
+				@media all and (max-width: $screen-sm-min) {
+					max-width: 24px;
+				}
 			}
 			
 			a {
@@ -191,15 +263,32 @@
 					}
 				}
 			}
+			
+			@media all and (max-width: $screen-xs-min) {
+				display: none;
+			}
 		}
 	}
 	
 	.video-preview {
-		padding-left: 10px;
+		
+		@media all and (min-width: $screen-xs-min + 1) {
+			padding-left: 10px;
+		}
 	
 		.channel-info {
 			@include flexbox;
 			@include flex-align-items(center);
+			
+			@media all and (max-width: $screen-xs-min) {
+				display: none;
+			}
+			
+			a {
+				&:focus {
+					box-shadow: none;
+				}
+			}
 			
 			> span {
 				@include flexbox;
@@ -214,6 +303,10 @@
 				
 				img {
 					max-width: 70px;
+					
+					@media all and (max-width: $screen-sm-min) {
+						max-width: 50px;
+					}
 				}
 				
 				h3 {
@@ -230,6 +323,15 @@
 				}
 			}
 			
+			.channel-subscribe {
+				white-space: nowrap;
+				
+				@media all and (max-width: $screen-sm-min) {
+					font-size: 10px;
+					padding: 3px 10px;
+				}
+			}
+			
 		}
 		
 		.video-player {
@@ -243,14 +345,28 @@
 			.video-title {
 				font-size: 15px;
 				margin-bottom: 5px;
+				
+				@media all and (max-width: $screen-sm-min) {
+					margin-bottom: 0;
+				}
+				
+				@media all and (max-width: $screen-xs-min) {
+					margin-top: 4px;
+				}
 			}
 			
 			.video-desc {
 				max-height: 30px;
 				overflow: hidden;
 			}
+			
+			@media all and (max-width: $screen-xs-min) {
+				margin-bottom: 10px;
+			}
 		
 		}
+		
+		
 	}
 	
 }
